# donkeycarLPH

./: .gitignore  Boutton_poussoir.md  README.md  hostnames  package.json  todo_jsfw
.github/workflows/: front-push-docker-image.yml  no-raspberrypi-image-build.yml  packer.yml  raspberrypi-image-build-needed.yml
3dDesigns/: adaptor_battery_yellowcar.stl  box.FCStd
3dDesigns/IR-circuit-wall-supports/: pied1.scad  pied2.scad
3dDesigns/LPH_pannel_foots/: foot.FCStd  (+2 more)
IR-tower/: README.md
ansible/: README.md  donkeycar.yml  hosts
anti-theft-ps4/: README.md  lowPart.stl  ps4AntiTheft.stl  upPart.stl
backend/: .gitignore  README.md  discorver_service_zeroconf.py  docker-compose.yml  setup.cfg  socketioTestPage.html  test_zero_conf_registration.py  websockets_demo.py
backend/donkeycarmanager/: app.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  worker_heartbeat_manager.py
backend/donkeycarmanager/config/: logging.yaml
backend/donkeycarmanager/crud/: cars.py  driving_waiting_queue.py  job.py  jobs.py  jobs_read.py  laptimers.py  players.py  races.py  workers.py  workers_read.py
backend/donkeycarmanager/emitters/: cars.py  jobs.py  jobs_without_job_sched.py  laptimers.py  races.py  workers.py
backend/donkeycarmanager/helpers/: async_cond_event.py  conditional_events.py  networking.py  registable_event.py  socker_io_manager.py  utils.py
backend/donkeycarmanager/routers/: cars.py  driving_waiting_queue.py  jobs.py  laptimers.py  players.py  races.py  workers.py
backend/donkeycarmanager/services/: async_job_scheduler.py  zero_conf_service.py
backend/ntp/: Dockerfile  startup.sh
backend/static/: swagger-ui.css
camera-cover/: README.md  camera-cover-holder.stl
car-chassis/: README.md  chassis.stl
dkmanager_trainner/: README.md  setup.cfg
dkmanager_trainner/dkmanager_trainer/config/: logging.yaml
dkmanager_trainner/dkmanager_trainer/controllers/: cli.py
dkmanager_trainner/dkmanager_trainer/helpers/: logging.py  os.py  proxy_socks.py
dkmanager_trainner/dkmanager_trainer/services/: ai_trainer_worker_service.py  ia_job_service.py
dkmanager_trainner/dkmanager_trainer/services/jobs/: job_train.py
dkmanager_worker/: .gitignore  README.md  setup.cfg
dkmanager_worker/dkmanager_worker/helpers/: RegistableEvents.py  conditional_events.py  retry_action.py
dkmanager_worker/dkmanager_worker/services/: heartbeat_service.py  job_service.py  manager_api_service.py  worker_service.py
dkmanager_worker/dkmanager_worker/services/jobs/: generic_job.py
doc/: DonkeycarBoothManagerArchitecture.drawio  controller.md
donkeycar-manager-front3/: .eslintrc.js  README.md  package.json
donkeycarManagerFront/: .eslintrc.js  Dockerfile  README.md  index.html  package-lock.json  package.json
donkeycarManangerFront/: README.md  package.json
packer/: README.md  donkeycar.hcl  donkeycar.pkr.hcl
waitingboard/: README.md  package-lock.json  package.json
(+206 files in other folders)
