
[metadata]
name = donkeycarmanager
version = attr: donkeycarmanager.__version__
description = Manager for multiple donkeycars
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin BERNARD
author_email = benjamin.bernard@lph.bzh
url = https://github.com/mdl29/donkeycarLPH/
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = donkeycarmanager
install_requires =
    uvicorn==0.17.6
    websockets==10.3
    SQLAlchemy==1.4.36
    psycopg2-binary==2.9.3
    pytz==2022.1
    python-socketio==5.6.0
    netifaces==0.11.0
    zeroconf==0.38.6

[options.entry_points]
console_scripts =
    donkeycar-manager = donkeycarmanager.main:main