[metadata]
name = dkmanager_trainer
version = attr: dkmanager_trainer.__version__
description = IA Trainer/worker for donkeycar manager. Train IA models.
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin BERNARD
author_email = benjamin.bernard@lph.bzh
url = https://github.com/mdl29/donkeycarLPH/
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = dkmanager_trainer
install_requires =
    PyYAML==6.0
    PySocks==1.7.1

[options.entry_points]
console_scripts =
    dkmanager-ai-trainer = dkmanager_trainer.controllers.cli:main