
[metadata]
name = dkmanager_worker
version = attr: dkmanager_worker.__version__
description = Worker library for donkeycar manager
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin BERNARD
author_email = benjamin.bernard@lph.bzh
url = https://github.com/mdl29/donkeycarLPH/
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = dkmanager_worker
install_requires =
    requests==2.27.1
    netifaces==0.11.0
    pydantic==1.9.1
    websockets==10.3
    zeroconf==0.38.6
    python-socketio==5.6.0
    websocket-client==1.3.2
